--- a/thrColFixHdr.css
+++ b/thrColFixHdr.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 body  {
-	background: #666666;
+	background: #73877B;
 	margin: 0; /* it's good practice to zero the margin and padding of the body element to account for differing browser defaults */
 	padding: 0;
 	text-align: center; /* this centers the container in IE 5* browsers. The text is then set to the left aligned default in the #container selector */
@@ -9,40 +9,47 @@ body  {
 	font-size: small;
 }
 .thrColFixHdr #container { 
-	width: 780px;  /* using 20px less than a full 800px width allows for browser chrome and avoids a horizontal scroll bar */
-	background: #FFFFFF;
+	width: 850px;  /* using 20px less than a full 800px width allows for browser chrome and avoids a horizontal scroll bar */
+	background: #FAF3DD;
 	margin: 0 auto; /* the auto margins (in conjunction with a width) center the page */
 	border: 1px solid #000000;
 	text-align: left; /* this overrides the text-align: center on the body element. */
 } 
 .thrColFixHdr #header { 
-	background: #DDDDDD; 
-	padding: 0 10px 0 20px;  /* this padding matches the left alignment of the elements in the divs that appear beneath it. If an image is used in the #header instead of text, you may want to remove the padding. */
+	background: #C8D5B9;
+	padding: 0px 50px 0px 50px;  /* this padding matches the left alignment of the elements in the divs that appear beneath it. If an image is used in the #header instead of text, you may want to remove the padding. */
 } 
 .thrColFixHdr #header h1 {
 	margin: 0; /* zeroing the margin of the last element in the #header div will avoid margin collapse - an unexplainable space between divs. If the div has a border around it, this is not necessary as that also avoids the margin collapse */
-	padding: 10px 0; /* using padding instead of margin will allow you to keep the element away from the edges of the div */
+	padding: 10px 0px 10px 0px; /* using padding instead of margin will allow you to keep the element away from the edges of the div */
 }
 .thrColFixHdr #sidebar1 {
 	float: left; /* since this element is floated, a width must be given */
 	width: 150px; /* the actual width of this div, in standards-compliant browsers, or standards mode in Internet Explorer will include the padding and border in addition to the width */
-	background: #EBEBEB; /* the background color will be displayed for the length of the content in the column, but no further */
+	background: #839788; /* the background color will be displayed for the length of the content in the column, but no further */
 	padding: 15px 10px 15px 20px; /* padding keeps the content of the div away from the edges */
 }
+
+.thrColFixHdr #sidebar2 a {
+	color:#000000;
+	font-size: x-small;
+}
+
 .thrColFixHdr #sidebar1 h3 {
-	color:#69F
+	color:#000000;
 }
 .thrColFixHdr #sidebar2 {
 	float: right; /* since this element is floated, a width must be given */
 	width: 160px; /* the actual width of this div, in standards-compliant browsers, or standards mode in Internet Explorer will include the padding and border in addition to the width */
-	background: #EBEBEB; /* the background color will be displayed for the length of the content in the column, but no further */
+	background: #839788; /* the background color will be displayed for the length of the content in the column, but no further */
 	padding: 15px 10px 15px 20px; /* padding keeps the content of the div away from the edges */
 }
 .thrColFixHdr #sidebar2 h3 {
-	color:#69F
+	color:#000000;
 }
+
 .thrColFixHdr #sidebar2 a {
-	color:#69F;
+	color:#000000;
 	font-size: x-small;
 }
 .thrColFixHdr #mainContent { 
@@ -82,7 +89,7 @@ body  {
 
 .thrColFixHdr #footer { 
 	padding: 0 10px 0 20px; /* this padding matches the left alignment of the elements in the divs that appear above it. */
-	background:#DDDDDD;
+	background:#C8D5B9;
 } 
 .thrColFixHdr #footer p {
 	margin: 0; /* zeroing the margins of the first element in the footer will avoid the possibility of margin collapse - a space between divs */
@@ -92,6 +99,7 @@ body  {
 }
 .fltrt { /* this class can be used to float an element right in your page. The floated element must precede the element it should be next to on the page. */
 	float: right;
+	width: 50%;
 	margin-left: 8px;
 }
 .fltlft { /* this class can be used to float an element left in your page */
@@ -130,6 +138,7 @@ a:hover {
     padding-top: 0px;
 }
 
+
 .required {
     font-size: x-small;
     background-color: #ffcccc;
@@ -138,4 +147,39 @@ a:hover {
     border-color: black;
     position: relative;
     left: 10%;
+}
+
+table {
+	color: #333;
+	font-family: Helvetica, Arial, sans-serif;
+	border-collapse:
+			collapse; border-spacing: 0;
+	margin-top: 10px;
+}
+
+td, th {
+	border: 1px solid transparent; /* No more visible border */
+	height: 30px;
+	transition: all 0.3s;  /* Simple transition for hover effect */
+}
+
+th {
+	background: #839788;  /* Darken header a bit */
+	font-weight: bold;
+	color: #000000;
+}
+
+td {
+	background: #000000;
+	text-align: center;
+}
+
+/* Cells in even rows (2,4,6...) are one color */
+tr:nth-child(even) td { background: #C4D5A7; }
+
+/* Cells in odd rows (1,3,5...) are another (excludes header cells)  */
+tr:nth-child(odd) td { background: #CED2b8; }
+
+tr:hover {
+	background-color: #ffffff;
 }
